Ordinaly alignment output fix!

--- a/HEJI Extensions/hejicalc-main/src/style.css
+++ b/HEJI Extensions/hejicalc-main/src/style.css
@@ -261,6 +261,7 @@ button.chromatic, .syntonic, .septimal, .undecimal, .tridecimal, .seventeen, .ni
     box-sizing: border-box;
     line-height: 2.875rem; /* For vertical centering */
     padding: 0; /* To help with line-height centering */
+    vertical-align: middle;
 }
 
 .label {
@@ -288,6 +289,7 @@ button.chromatic, .syntonic, .septimal, .undecimal, .tridecimal, .seventeen, .ni
     display: inline-flex;
     margin-top: 0.25rem;
     margin-bottom: 0;
+    vertical-align: middle;
 }
 
 #num {
@@ -306,9 +308,10 @@ button.chromatic, .syntonic, .septimal, .undecimal, .tridecimal, .seventeen, .ni
 .noteName{
     color: var(--color-text);
     font-family: Menlo, Monaco, 'Courier New', monospace;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 2.3rem;
     display: inline;
+    vertical-align: middle;
 }
 
 .clear {
